Continue to improve projects

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,7 +89,7 @@
     <string name="un_follow_failed">Unfollow failed</string>
     <string name="Unfollow">Unfollow</string>
     <string name="other">Other</string>
-    <string name="version">Version</string>
+    <string name="version">Version0.1</string>
     <string name="clear_cache">Clear cache</string>
     <string name="license">License</string>
     <string name="clear_success">Clear cache success</string>
